[gd_scene load_steps=5 format=3 uid="uid://q46ibinmqrxc"]

[ext_resource type="Script" path="res://Scenes/Menus/StartMenu.gd" id="1_vpcoy"]
[ext_resource type="FontFile" uid="uid://du8fhd0ox5g5c" path="res://TutorialGame/assets/fonts/PixelOperator8-Bold.ttf" id="2_gxslm"]
[ext_resource type="Texture2D" uid="uid://bcjtxsd7itpi0" path="res://Assets/ScreenShots/SMP - Main Menu.png" id="2_n8ja0"]

[sub_resource type="Theme" id="Theme_jeh72"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpcoy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
offset_right = 159.0
offset_bottom = 241.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../LoadButton")
focus_next = NodePath("../LoadButton")
focus_previous = NodePath("../QuitButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.854696, 0.866919, 0, 1)
theme_override_colors/font_focus_color = Color(0.854696, 0.866919, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gxslm")
theme_override_font_sizes/font_size = 16
text = "Play"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = SubResource("Theme_jeh72")
text = "Load"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Options"

[node name="WebsiteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Website"

[node name="HallOfFameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Hall of Fame"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_n8ja0")
expand_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WebsiteButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HallOfFameButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
